# pigz

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  README.py.md  build-python-linux.sh  build-python.sh  pigz.c  pigz.h  pigz_main.c  pybind.cpp  pyproject.toml  setup.py
benchmarks/: .gitignore  run.py  run.sh
cmake/: PythonModules.cmake
tests/: test_basic.py
